--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/453ecd0b52.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<script src="https://kit.fontawesome.com/453ecd0b52.js" crossorigin="anonymous"></script>
 
 <body>
     <header>
@@ -38,6 +40,120 @@
             </div>
         </div>
     </main>
+    <main>
+        <div class="blog-section">
+            <div class="more-blog top">
+                <div class="more-blog-img">
+                    <img src="./assets/left-image.jpg" class="left-img" alt="Person looking at fish in an aquarium">
+                </div>
+                <div class="more-blog-text">
+                    <h4>New Additions</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero soluta,
+                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
+                        Alias, necessitatibus facilis?</p>
+                    <button>Read More</button>
+                </div>
+            </div>
+            <div class="more-blog ">
+                <div class="more-blog-text bottom">
+                    <h4>New Additions</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
+                        soluta,
+                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
+                        Alias, necessitatibus facilis?</p>
+                    <button>Read More</button>
+                </div>
+                <div class="more-blog-img">
+                    <img src="./assets/left-image.jpg" alt="Person looking at fish in an aquarium">
+                </div>
+            </div>
+        </div>
+    </main>
+    <main>
+        <div class="wrapper links-section">
+            <div class="links">
+                <a href="#">
+                    <h3>Location</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
+                        perferendis
+                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
+                        incidunt
+                        unde eos similique!</p>
+                    <span class="sr-only">Link to Catalogue</span>
+                </a>
+            </div>
+            <div class="links">
+                <a href="#">
+                    <h3>Locations</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
+                        perferendis
+                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
+                        incidunt
+                        unde eos similique!</p>
+                    <span class="sr-only">Link to Catalogue</span>
+                </a>
+            </div>
+            <div class="links">
+                <a href="#">
+                    <h3>Locations</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
+                        perferendis
+                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
+                        incidunt
+                        unde eos similique!</p>
+                    <span class="sr-only">Link to Catalogue</span>
+                </a>
+            </div>
+            <div class="links">
+                <a href="#">
+                    <h3>Locations</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
+                        perferendis
+                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
+                        incidunt
+                        unde eos similique!</p>
+                    <span class="sr-only">Link to Catalogue</span>
+                </a>
+            </div>
+        </div>
+    </main>
+    <main>
+        <div class="image-banner">
+            <img src="./assets/banner.jpg" alt="person looking at whale in aquarium">
+        </div>
+    </main>
+    <main>
+        <div class="wrapper this-month">
+            <div class="more-blog">
+                <div class="more-blog-img">
+                    <img src="./assets/small-box.jpg" alt="fish swimming" class="img-left">
+                </div>
+                <div class="this-months-text">
+                    <h3>This Months Profile</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
+                        soluta,
+                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
+                        Alias, necessitatibus facilis?</p>
+                    <button>Read More</button>
+                </div>
+            </div>
+        </div>
+    </main>
+    <main class="gallery">
+        <div class="wrapper">
+            <ul class="img-gallery">
+                <li><img src="./assets/gallery-image-1.jpg" alt="Close up of painting">
+                </li>
+                <li><img src="./assets/gallery-image-2.jpg" alt="Close up of painting texture">
+                </li>
+                <li><img src="./assets/gallery-image-3.jpg" alt="Set up of paint cans on floors">
+                </li>
+            </ul>
+        </div>
+    </main>
+    <div class="copyright">
+        <p>Copyright © HackerYou 2022</p>
+    </div>
 </body>
 
 </html>
