added contacts page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src="https://kit.fontawesome.com/453ecd0b52.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<script src="https://kit.fontawesome.com/453ecd0b52.js" crossorigin="anonymous"></script>
 
 <body>
     <header>
@@ -73,7 +72,24 @@
         <div class="wrapper links-section">
             <div class="links">
                 <a href="#">
-                    <h3>Location</h3>
+                    <h3 class="links-header">
+                        <div class="icon-circle"> <i class="fas fa-location-arrow"></i> </div>Location
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
+                        perferendis
+                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
+                        incidunt
+                        unde eos similique!</p>
+                    <span class="sr-only">Link to Catalogue</span>
+                </a>
+            </div>
+
+            <div class="links">
+                <a href="#">
+                    <h3 class="links-header">
+                        <div class="icon-circle"><i class="fas fa-users"></i> </div>Collaboration
+                    </h3>
+
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
                         perferendis
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
@@ -84,7 +100,9 @@
             </div>
             <div class="links">
                 <a href="#">
-                    <h3>Locations</h3>
+                    <h3 class="links-header">
+                        <div class="icon-circle"><i class="fas fa-sticky-note"></i></div>Blog
+                    </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
                         perferendis
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
@@ -95,18 +113,10 @@
             </div>
             <div class="links">
                 <a href="#">
-                    <h3>Locations</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
-                        perferendis
-                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
-                        incidunt
-                        unde eos similique!</p>
-                    <span class="sr-only">Link to Catalogue</span>
-                </a>
-            </div>
-            <div class="links">
-                <a href="#">
-                    <h3>Locations</h3>
+                    <h3 class="links-header">
+                        <div class="icon-circle"><i class="fas fa-location-arrow"></i></div>Location
+                    </h3>
+
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
                         perferendis
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
