--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,8 @@
             <h2>GET IN TOUCH</h2>
         </div>
     </header>
-    <main class="">
-        <div class="wrapper get-in-touch">
-
+    <main>
+        <div class="wrapper contact-us">
             <div class="info">
                 <div class="socials">
                     <a href="">
@@ -48,17 +47,14 @@
                         <span class="sr-only">Link to Twitter</span>
                     </a>
                 </div>
-
                 <h4>INFO@EMAIL.COM</h4>
                 <p>123-456-7890</p>
                 <p>123 Queen Street West, Unit 10</p>
                 <p>Toronto, Ontario</p>
                 <p>M5V2D5</p>
             </div>
-            <div class="contact-us">
-
+            <div class="contact-title">
                 <form action="#" method="POST" class="contactForm" name="contactForm">
-
                     <div class="email-name">
                         <label for="name" class="sr-only">Name</label>
                         <input type="text" id="name" placeholder="Name">
@@ -67,9 +63,8 @@
                     </div>
 
                     <label for="message" class="sr-only">Message</label>
-                    <textarea name="message" id="message" cols="90" rows="15" placeholder="Message for me"></textarea>
-
-                    <button>Submit</button>
+                    <textarea name="message" id="message" cols="90" rows="20" placeholder="Message for me"></textarea>
+                    <button class="submit">Submit</button>
                 </form>
             </div>
         </div>
