--- a/index.html
+++ b/index.html
@@ -11,20 +11,7 @@
     <title>Document</title>
 </head>
 
-<body>
-    <header>
-        <div class="wrapper">
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <h1>UNDER THE SEA</h1>
-        </div>
-        <img src="assets/home-box-header.png" alt="Fish in aquarium">
+<&::placeholdersrc="assets /home-box-header.png" alt="Fish in aquarium">
     </header>
     <main>
         <div class="wrapper">
@@ -164,6 +151,6 @@
     <div class="copyright">
         <p>Copyright © HackerYou 2022</p>
     </div>
-</body>
+    </body>
 
 </html>
