added blog page

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- header/nav -->
     <header class="contact-header">
         <div class="wrapper">
             <nav>
@@ -25,6 +26,7 @@
             <h2>GET IN TOUCH</h2>
         </div>
     </header>
+    <!-- info -->
     <main>
         <div class="wrapper contact-us">
             <div class="info">
@@ -53,8 +55,9 @@
                 <p>Toronto, Ontario</p>
                 <p>M5V2D5</p>
             </div>
-            <div class="contact-title">
-                <form action="#" method="POST" class="contactForm" name="contactForm">
+            <!-- contact us form -->
+            <div class="contact-title contact-form">
+                <form action="#" method="POST" class="contactForm positioning" name="contact-form">
                     <div class="email-name">
                         <label for="name" class="sr-only">Name</label>
                         <input type="text" id="name" placeholder="Name">
@@ -69,10 +72,7 @@
             </div>
         </div>
     </main>
-    <div class="copyright">
-        <p>Copyright © HackerYou 2022</p>
-    </div>
-    </footer>
+
 </body>
 
 </html>
