--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- header/nav -->
     <header>
         <div class="wrapper">
             <nav>
@@ -26,6 +27,7 @@
         </div>
         <img src="assets/home-box-header.png" alt="Fish in aquarium">
     </header>
+    <!-- main-content -->
     <main>
         <div class="wrapper">
             <div class="learn-more">
