added style changes

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/453ecd0b52.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -15,7 +14,7 @@
     <!-- header/nav -->
     <header class="contact-header">
         <div class="wrapper">
-            <nav>
+            <nav class="contact-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -57,7 +56,7 @@
             </div>
             <!-- contact us form -->
             <div class="contact-title contact-form">
-                <form action="#" method="POST" class="contactForm positioning" name="contact-form">
+                <form action="#" method="POST" class="contactForm positioning left-shadow" name="contact-form">
                     <div class="email-name">
                         <label for="name" class="sr-only">Name</label>
                         <input type="text" id="name" placeholder="Name">
