--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <main>
         <div class="blog-section">
             <div class="more-blog top">
-                <div class="more-blog-img">
-                    <img src="./assets/left-image.jpg" class="left-img" alt="Person looking at fish in an aquarium">
+                <div class="img-left-position">
+                    <img src="./assets/left-image.jpg" class="right-shadow" alt="Person looking at fish in an aquarium">
                 </div>
                 <div class="more-blog-text">
                     <h4>New Additions</h4>
@@ -64,8 +64,8 @@
                         Alias, necessitatibus facilis?</p>
                     <button>Read More</button>
                 </div>
-                <div class="more-blog-img">
-                    <img src="./assets/left-image.jpg" alt="Person looking at fish in an aquarium">
+                <div class="img-right-position">
+                    <img src="./assets/right-image.jpg" class="left-shadow" alt="Person looking at fish in an aquarium">
                 </div>
             </div>
         </div>
@@ -135,17 +135,19 @@
         </div>
     </main>
     <main>
-        <div class="wrapper this-month">
-            <div class="more-blog">
-                <div class="more-blog-img">
-                    <img src="./assets/small-box.jpg" alt="fish swimming" class="img-left">
+        <div class="wrapper ">
+            <div class="more-blog this-month">
+                <div class="more-blog img-left">
+                    <img src="./assets/small-box.jpg" alt="fish swimming" class="small-fish right-shadow">
                 </div>
                 <div class="this-months-text">
                     <h3>This Months Profile</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
                         soluta,
                         libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
-                        Alias, necessitatibus facilis?</p>
+                        Alias, necessitatibus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        porro id ut blanditiis! Inventore ab cumque quis expedita, voluptates eveniet recusandae amet
+                        iusto fugiat autem laudantium unde quam ratione necessitatibus.</p>
                     <button>Read More</button>
                 </div>
             </div>
@@ -154,11 +156,11 @@
     <main class="gallery">
         <div class="wrapper">
             <ul class="img-gallery">
-                <li><img src="./assets/gallery-image-1.jpg" alt="Close up of painting">
+                <li><img src="./assets/gallery-image-1.jpg" alt="Small child against aquarium glass">
                 </li>
-                <li><img src="./assets/gallery-image-2.jpg" alt="Close up of painting texture">
+                <li><img src="./assets/gallery-image-2.jpg" alt="People gathered around aquairum glass to see shark">
                 </li>
-                <li><img src="./assets/gallery-image-3.jpg" alt="Set up of paint cans on floors">
+                <li><img src="./assets/gallery-image-3.jpg" alt="Fish swimming in aquarium">
                 </li>
             </ul>
         </div>
