--- a/blog.html
+++ b/blog.html
@@ -25,8 +25,9 @@
 
 <body>
     <header class="blog-header">
-        <div class="wrapper">
-            <nav>
+        <div class="wrapper blog-position">
+            <h2>Blog</h2>
+            <nav class="blog-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -34,19 +35,19 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <h2>Blog</h2>
         </div>
     </header>
     <main>
         <div class="two-col wrapper">
             <div class="col-left">
-                <img src="./assets/side-blog-image.jpg" alt="Close up of shark in Aquarium" class="left-img">
-                <div class="blog-text">
+                <div class="blog-left-img">
+                    <img src="./assets/side-blog-image.jpg" alt="Close up of shark in Aquarium"
+                        class="blog-right-shadow">
+                </div>
+                <div class=" blog-text">
                     <h4>New Additions</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero soluta,
-                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
-                        Alias, necessitatibus facilis?</p>
-
+                        libero ipsa totam, fuga consectetur?</p>
                     <h4>Recent Posts</h4>
                     <ul>
                         <li>
@@ -66,22 +67,34 @@
                 </div>
             </div>
             <div class="col-right">
-                <img src="./assets/blog-post-image.jpg" alt="Clown fish and Sea Anemone" class="right-img">
-                <div class="blog-post">
+                <div class="blog-img-right">
+                    <img src="./assets/blog-post-image.jpg" alt="Clown fish and Sea Anemone" class="blog-left-shadow">
+                </div>
+                <div class="blog-post post-right-shadow">
                     <h3>Discovering New Species</h3>
                     <p>Monday May 4th, 2019 by Dieula</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, laudantium non. Perspiciatis
+                        nisi quas assumenda mollitia sunt? Laudantium, pariatur libero. Dolorem, obcaecati quas! Dolorem
+                        cum autem minima voluptatum! Nobis, recusandae.</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus et laudantium saepe, officiis
                         sit
                         vitae quas, quaerat quam incidunt recusandae ratione quod dolor placeat praesentium nisi dicta
-                        dignissimos atque optio.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus et laudantium saepe, officiis
+                        dignissimos atque optio.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus et laudantium saepe,
+                        officiis
                         sit
                         vitae quas, quaerat quam incidunt recusandae ratione quod dolor placeat praesentium nisi dicta
-                        dignissimos atque optio.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus et laudantium saepe, officiis
-                        sit
-                        vitae quas, quaerat quam incidunt recusandae ratione quod dolor placeat praesentium nisi dicta
-                        dignissimos atque optio.</p>
+                        dignissimos atque optio.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus et laudantium saepe,
+                        officiis
+                        sit vitae quas, quaerat quam incidunt recusandae ratione quod dolor placeat praesentium nisi
+                        dicta
+                        dignissimos atque optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis
+                        numquam minus corrupti autem laudantium, nihil ad ratione neque laboriosam facere enim atque ut
+                        quos tempora sint facilis beatae, fuga eveniet.lorem Lorem ipsum dolor sit, amet consectetur
+                        adipisicing elit. Accusamus minus obcaecati quam nostrum et consequatur, quibusdam id cumque,
+                        excepturi perferendis voluptatum recusandae assumenda maxime voluptas animi, optio distinctio
+                        amet mollitia. </p>
                 </div>
                 <div class="comments-section">
                     <h4>Comments</h4>
@@ -98,7 +111,7 @@
                     </div>
                     <div class="comments">
                         <div>
-                            <img src="./assets/comment-1.jpg" alt="portrait shot of a female">
+                            <img src="./assets/comment-2.jpg" alt="portrait shot of a female">
                         </div>
                         <div>
                             <p>Tuesday October 9th, 2018 By Jeremy</p>
@@ -118,7 +131,7 @@
                         </div>
 
                         <label for="message" class="sr-only">Message</label>
-                        <textarea name="message" id="message" cols="90" rows="20"
+                        <textarea name="message" id="message" cols="90" rows=" 20"
                             placeholder="Message for me"></textarea>
                         <button class="submit">Post Comment</button>
                     </form>
