added more changes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </div>
     </main>
+
     <main>
         <div class="blog-section">
             <div class="more-blog top">
@@ -49,8 +50,10 @@
                 </div>
                 <div class="more-blog-text">
                     <h4>New Additions</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero soluta,
-                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
+                        soluta,
+                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas
+                        blanditiis!
                         Alias, necessitatibus facilis?</p>
                     <button>Read More</button>
                 </div>
@@ -60,7 +63,8 @@
                     <h4>New Additions</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
                         soluta,
-                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
+                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas
+                        blanditiis!
                         Alias, necessitatibus facilis?</p>
                     <button>Read More</button>
                 </div>
@@ -70,13 +74,30 @@
             </div>
         </div>
     </main>
+
+    <!-- <div class="comments-section">
+        <h4>Comments</h4>
+        <div class="comments">
+            <div>
+                <img src="./assets/comment-1.jpg" alt="portrait shot of a female">
+            </div>
+            <div>
+                <p>Tuesday October 9th, 2018 By Jeremy</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid animi praesentium
+                    repellendus aperiam dolorum quidem omnis ut aliquam! Libero ullam consequatur quos
+                    labore ipsam iure ipsa, ipsum assumenda vitae odit!</p>
+                </div> -->
+
     <main>
         <div class="wrapper links-section">
             <div class="links">
-                <a href="#">
-                    <h3 class="links-header">
-                        <div class="icon-circle"> <i class="fas fa-location-arrow"></i> </div>Location
+                <div class="links-header">
+                    <div class="icon-circle"><i class="fas fa-location-arrow"></i></div>
+                    <h3>
+                        Location
                     </h3>
+                </div>
+                <a href="#">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
                         perferendis
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
@@ -84,27 +105,17 @@
                         unde eos similique!</p>
                     <span class="sr-only">Link to Catalogue</span>
                 </a>
+
             </div>
 
             <div class="links">
-                <a href="#">
-                    <h3 class="links-header">
-                        <div class="icon-circle"><i class="fas fa-users"></i> </div>Collaboration
+                <div class="links-header">
+                    <div class="icon-circle"><i class="fas fa-users"></i> </div>
+                    <h3>
+                        Collaboration
                     </h3>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
-                        perferendis
-                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
-                        incidunt
-                        unde eos similique!</p>
-                    <span class="sr-only">Link to Catalogue</span>
-                </a>
-            </div>
-            <div class="links">
+                </div>
                 <a href="#">
-                    <h3 class="links-header">
-                        <div class="icon-circle"><i class="fas fa-sticky-note"></i></div>Blog
-                    </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
                         perferendis
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
@@ -114,11 +125,29 @@
                 </a>
             </div>
             <div class="links">
-                <a href="#">
-                    <h3 class="links-header">
-                        <div class="icon-circle"><i class="fas fa-location-arrow"></i></div>Location
+                <div class="links-header">
+                    <div class="icon-circle"><i class="fas fa-sticky-note"></i></div>
+                    <h3>
+                        Blog
                     </h3>
-
+                </div>
+                <a href="#">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
+                        perferendis
+                        nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
+                        incidunt
+                        unde eos similique!</p>
+                    <span class="sr-only">Link to Catalogue</span>
+                </a>
+            </div>
+            <div class="links">
+                <div class="links-header">
+                    <div class="icon-circle"><i class="fas fa-location-arrow"></i></div>
+                    <h3>
+                        Location
+                    </h3>
+                </div>
+                <a href="#">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore voluptas officia
                         perferendis
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
@@ -144,9 +173,12 @@
                     <h3>This Months Profile</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
                         soluta,
-                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas blanditiis!
-                        Alias, necessitatibus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-                        porro id ut blanditiis! Inventore ab cumque quis expedita, voluptates eveniet recusandae amet
+                        libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas
+                        blanditiis!
+                        Alias, necessitatibus facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Magni
+                        porro id ut blanditiis! Inventore ab cumque quis expedita, voluptates eveniet recusandae
+                        amet
                         iusto fugiat autem laudantium unde quam ratione necessitatibus.</p>
                     <button>Read More</button>
                 </div>
