--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="img-left-position">
                     <img src="./assets/left-image.jpg" class="right-shadow" alt="Person looking at fish in an aquarium">
                 </div>
-                <div class="more-blog-text">
+                <div class="more-blog-text top">
                     <h4>New Additions</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
                         soluta,
@@ -58,7 +58,7 @@
                     <button>Read More</button>
                 </div>
             </div>
-            <div class="more-blog ">
+            <div class="more-blog bottom">
                 <div class="more-blog-text bottom">
                     <h4>New Additions</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
@@ -75,18 +75,6 @@
         </div>
     </main>
 
-    <!-- <div class="comments-section">
-        <h4>Comments</h4>
-        <div class="comments">
-            <div>
-                <img src="./assets/comment-1.jpg" alt="portrait shot of a female">
-            </div>
-            <div>
-                <p>Tuesday October 9th, 2018 By Jeremy</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid animi praesentium
-                    repellendus aperiam dolorum quidem omnis ut aliquam! Libero ullam consequatur quos
-                    labore ipsam iure ipsa, ipsum assumenda vitae odit!</p>
-                </div> -->
 
     <main>
         <div class="wrapper links-section">
@@ -105,12 +93,11 @@
                         unde eos similique!</p>
                     <span class="sr-only">Link to Catalogue</span>
                 </a>
-
             </div>
 
             <div class="links">
                 <div class="links-header">
-                    <div class="icon-circle"><i class="fas fa-users"></i> </div>
+                    <div class="icon-circle"><i class="fas fa-users"></i></div>
                     <h3>
                         Collaboration
                     </h3>
