--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </nav>
             <h1>UNDER THE SEA</h1>
         </div>
-        <img src="assets/home-box-header.png" alt="Fish in aquarium">
+        <div class="header-img">
+            <img src="assets/home-box-header.png" alt="Fish in aquarium">
+        </div>
     </header>
     <!-- main-content -->
     <main>
