--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <img src="./assets/small-box.jpg" alt="fish swimming" class="small-fish right-shadow">
                 </div>
                 <div class="this-months-text">
-                    <h3>This Months Profile</h3>
+                    <h3>This Month's Profile</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero
                         soluta,
                         libero ipsa totam, fuga consectetur delectus nam pariatur quasi hic sed voluptas
