--- a/blog.html
+++ b/blog.html
@@ -129,11 +129,12 @@
                             <label for="email" class="sr-only">Email</label>
                             <input type="email" id="email" placeholder="Email address">
                         </div>
-
-                        <label for="message" class="sr-only">Message</label>
-                        <textarea name="message" id="message" cols="90" rows=" 20"
-                            placeholder="Message for me"></textarea>
-                        <button class="submit">Post Comment</button>
+                        <div class="msg-btn">
+                            <label for="message" class="sr-only">Message</label>
+                            <textarea name="message" id="message" cols="90" rows=" 20"
+                                placeholder="Message for me"></textarea>
+                            <button class="submit">Post Comment</button>
+                        </div>
                     </form>
                 </div>
             </div>
