--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,10 @@
                     <div class="email-name">
                         <label for="name" class="sr-only">Name</label>
                         <input type="text" id="name" placeholder="Name">
+
                         <label for="email" class="sr-only">Email</label>
                         <input type="email" id="email" placeholder="Email address">
                     </div>
-
                     <label for="message" class="sr-only">Message</label>
                     <textarea name="message" id="message" cols="90" rows="20" placeholder="Message for me"></textarea>
                     <button class="submit">Submit</button>
@@ -72,7 +72,9 @@
             </div>
         </div>
     </main>
-
 </body>
+<div class="copyright">
+    <p>Copyright © HackerYou 2022</p>
+</div>
 
 </html>
