--- a/blog.html
+++ b/blog.html
@@ -25,8 +25,7 @@
 
 <body>
     <header class="blog-header">
-        <div class="wrapper blog-position">
-            <h2>Blog</h2>
+        <div class="wrapper blog-head">
             <nav class="blog-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -35,6 +34,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <h2 class="blog-title">Blog</h2>
         </div>
     </header>
     <main>
@@ -44,7 +44,7 @@
                     <img src="./assets/side-blog-image.jpg" alt="Close up of shark in Aquarium"
                         class="blog-right-shadow">
                 </div>
-                <div class=" blog-text">
+                <div class="blog-text">
                     <h4>New Additions</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error sequi, non vero soluta,
                         libero ipsa totam, fuga consectetur?</p>
@@ -54,13 +54,13 @@
                             <p>Lorem ipsum dolor sit</p>
                         </li>
                         <li>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p> amet consectetur adipisicing.</p>
                         </li>
                         <li>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Quidem in laudantium,</p>
                         </li>
                         <li>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>nesciunt et corrupti minima </p>
                         </li>
 
                     </ul>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="msg-btn">
                             <label for="message" class="sr-only">Message</label>
-                            <textarea name="message" id="message" cols="90" rows=" 20"
+                            <textarea name="message" class="blog-text-area" id="message" cols="90" rows=" 20"
                                 placeholder="Message for me"></textarea>
                             <button class="submit">Post Comment</button>
                         </div>
