--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <h2>GET IN TOUCH</h2>
+            <h2 class="contact-head">GET IN TOUCH</h2>
         </div>
     </header>
     <!-- info -->
