added media queries

--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,9 @@
 <body>
     <header class="blog-header">
         <div class="wrapper blog-head">
+            <div class="menu-btn" aria-label="menu">
+                <i class="fas fa-bars fa-2x"></i>
+            </div>
             <nav class="blog-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
