--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- header/nav -->
     <header>
         <div class="wrapper">
+            <div class="menu-btn" aria-label="menu">
+                <i class="fas fa-bars fa-2x"></i>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
