--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,10 @@
 <body>
     <!-- header/nav -->
     <header class="contact-header">
-        <div class="wrapper">
+        <div class="wrapper contact-head">
+            <div class="menu-btn" aria-label="menu">
+                <i class="fas fa-bars fa-2x"></i>
+            </div>
             <nav class="contact-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -58,11 +61,14 @@
             <div class="contact-title contact-form">
                 <form action="#" method="POST" class="contactForm positioning left-shadow" name="contact-form">
                     <div class="email-name">
-                        <label for="name" class="sr-only">Name</label>
-                        <input type="text" id="name" placeholder="Name">
-
-                        <label for="email" class="sr-only">Email</label>
-                        <input type="email" id="email" placeholder="Email address">
+                        <div class="form-name">
+                            <label for="name" class="sr-only">Name</label>
+                            <input type="text" id="name" placeholder="Name">
+                        </div>
+                        <div class="form-email">
+                            <label for="email" class="sr-only">Email</label>
+                            <input type="email" id="email" placeholder="Email address">
+                        </div>
                     </div>
                     <label for="message" class="sr-only">Message</label>
                     <textarea name="message" id="message" cols="90" rows="20" placeholder="Message for me"></textarea>
