--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/453ecd0b52.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Welcome to Under the Sea</title>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
             <h1>UNDER THE SEA</h1>
@@ -96,7 +96,7 @@
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
                         incidunt
                         unde eos similique!</p>
-                    <span class="sr-only">Link to Catalogue</span>
+                    <span class="sr-only">Link to Location Page</span>
                 </a>
             </div>
 
@@ -113,7 +113,7 @@
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
                         incidunt
                         unde eos similique!</p>
-                    <span class="sr-only">Link to Catalogue</span>
+                    <span class="sr-only">Link to Collaborations Page</span>
                 </a>
             </div>
             <div class="links">
@@ -129,14 +129,14 @@
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
                         incidunt
                         unde eos similique!</p>
-                    <span class="sr-only">Link to Catalogue</span>
+                    <span class="sr-only">Link to Blogs</span>
                 </a>
             </div>
             <div class="links">
                 <div class="links-header">
-                    <div class="icon-circle"><i class="fas fa-location-arrow"></i></div>
+                    <div class="icon-circle"><i class="fas fa-phone"></i></div>
                     <h3>
-                        Location
+                        Get in Touch
                     </h3>
                 </div>
                 <a href="#">
@@ -145,7 +145,7 @@
                         nesciunt tempore veniam id vero obcaecati. Modi totam consequuntur rem facere quis nulla
                         incidunt
                         unde eos similique!</p>
-                    <span class="sr-only">Link to Catalogue</span>
+                    <span class="sr-only">Link to Contacts Us Page</span>
                 </a>
             </div>
         </div>
