added JS for functionality

--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
                 <i class="fas fa-bars fa-2x"></i>
             </div>
             <nav class="blog-nav">
-                <ul>
+                <ul class="nav-menu">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
@@ -116,12 +116,14 @@
                         <div>
                             <img src="./assets/comment-2.jpg" alt="portrait shot of a female">
                         </div>
-                        <div>
+                        <div class="comments-p">
                             <p>Tuesday October 9th, 2018 By Jeremy</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid animi praesentium
                                 repellendus aperiam dolorum quidem omnis ut aliquam! Libero ullam consequatur quos
                                 labore ipsam iure ipsa, ipsum assumenda vitae odit!</p>
                         </div>
+                    </div>
+                    <div class="new-comments">
                     </div>
                 </div>
                 <div class="leave-comment">
@@ -140,7 +142,7 @@
                             <label for="message" class="sr-only">Message</label>
                             <textarea name="message" class="blog-text-area" id="message" cols="90" rows=" 20"
                                 placeholder="Message for me"></textarea>
-                            <button class="submit">Post Comment</button>
+                            <button type="submit" class="submit">Post Comment</button>
                         </div>
                     </form>
                 </div>
@@ -152,6 +154,9 @@
             <p>Copyright © HackerYou 2022</p>
         </div>
     </footer>
+    <script src="script.js">
+    
+    </script>
 </body>
 
 </html>
