--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <i class="fas fa-bars fa-2x"></i>
             </div>
             <nav class="contact-nav">
-                <ul>
+                <ul class="nav-menu">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
@@ -78,9 +78,10 @@
             </div>
         </div>
     </main>
+    <div class="copyright">
+        <p>Copyright © HackerYou 2022</p>
+    </div>
+    <script src="script.js"></script>
 </body>
-<div class="copyright">
-    <p>Copyright © HackerYou 2022</p>
-</div>
 
 </html>
