--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <i class="fas fa-bars fa-2x"></i>
             </div>
             <nav>
-                <ul class="nav-menu show">
+                <ul class="nav-menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="./blog.html">Blog</a></li>
@@ -189,11 +189,17 @@
             </ul>
         </div>
     </main>
+    <footer>
     <div class="copyright">
         <p>Copyright © HackerYou 2022</p>
     </div>
-    <script>
-        document.querySelector('.menu-btn').addEventListener("click", () => document.querySelector(".nav-menu").classList.toggle("show"));
+    </footer>
+    <script src="script.js">
+     document.querySelector('.menu-btn').addEventListener("click", () => {
+
+            document.querySelector(".nav-menu").classList.toggle("show");
+            console.log(document.querySelector(".nav-menu"));
+        })    
     </script>
 </body>
 
