fixed some issues with image carousel

--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
     </div>
     </footer>
     <script src="script.js">
-     document.querySelector('.menu-btn').addEventListener("click", () => {
+    //  document.querySelector('.menu-btn').addEventListener("click", () => {
 
-            document.querySelector(".nav-menu").classList.toggle("show");
-            console.log(document.querySelector(".nav-menu"));
-        })    
+    //         document.querySelector(".nav-menu").classList.toggle("show");
+    //         console.log(document.querySelector(".nav-menu"));
+    //     })    
     </script>
 </body>
 
